# hri_emotion_recognizer

./: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
config/: 00-defaults.yml
hri_emotion_recognizer/: hri_emotion_recognizer.py
launch/: emotion_recognizer.launch.py
module/: hri_emotion_recognizer  hri_emotion_recognizer_module.yaml
test/: test_emotion_recog.py
test/data/: image_labels.csv
